--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -22,10 +22,8 @@ jobs:
         with:
           scan-type: 'config'
           hide-progress: false
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
